# NeuroSync_Player

./: .gitignore  LICENCE  README.md  WIP_realtime_llm_to_face.py  config.py  discord_bot.py  getVoicesElevenLabs.py  llm_to_face.py  play_generated_files.py  ptt_to_s2s_to_face.py  push_to_talk_to_face.py  pyproject.toml  regen_generated.py  requirements.txt  stream_mic_audio_to_generate.py  text_to_face.py  twitch_llm.py  wave_to_face.py  youtube_llm.py
livelink/: send_to_unreal.py
livelink/animations/: animation_emotion.py  animation_loader.py  blending_anims.py  default_animation.py
livelink/connect/: dimension_scalars.py  faceblendshapes.py  livelink_init.py  pylivelinkface.py
utils/: api_utils.py  audio_face_workers.py  audio_workers.py  generated_runners.py  generated_utils.py  getVoicesElevenLabs.py  llm_utils.py  local_tts.py  neurosync_api_connect.py  realtime_api_utils.py
utils/audio/: convert_audio.py  load_audio.py  play_audio.py  record_audio.py  save_audio.py
utils/csv/: save_csv.py
utils/emote_sender/: send_emote.py
utils/files/: file_utils.py
utils/llm/: chat_utils.py  llm_initialiser.py  llm_queue_utils.py  llm_utils.py  realtime_api_utils.py  realtime_queue_utils.py  sentence_builder.py  turn_processing.py
utils/mic_stream/: mic_stream_utils.py
utils/neurosync/: multi_part_return.py  neurosync_api_connect.py
utils/streamer_utils/: twitch_utils.py  youtube_utils.py
utils/stt/: transcribe_whisper.py
utils/tts/: eleven_labs.py  getVoicesElevenLabs.py  livepeer_tts.py  local_tts.py  tts_bridge.py
utils/vector_db/: get_embedding.py  (+2 more)
(+24 files in other folders)
